2002-06-13  Tim Jenness  <timj@jach.hawaii.edu>

	* Core.pm (adamtask_obeyw): Fix really stupid bug where '|' was
	used instead of '||'. Let to the first character of the parameter
	string being downcased.

2000-01-31  Tim Jenness  <timj@jach.hawaii.edu>

	* Core.pm (adamtask_message): Pass around reference to array
	rather than string joined with :: -- was causing problems on the
	split.

1999-04-21  Tim Jenness  <timj@jach.hawaii.edu>

	* Core.pm (adamtask_init): Fix -w with RELAY_NAME
	(adamtask): Use Proc::Simple rather than SimpleKill

1998-07-04  Tim Jenness  <timj@jach.hawaii.edu>

	* Core.pm (adamtask_control): Protect from -w warnings when
	sending par_reset
