@@ -1,3 +1,8 @@
+2005-02-24  Tim Jenness  <tjenness@cpan.org>
+
+	* Core.pm (adamtask_init): Explicit error message for the failure
+	to find the relay.
+
 2002-06-13  Tim Jenness  <timj@jach.hawaii.edu>
 
 	* Core.pm (adamtask_obeyw): Fix really stupid bug where '|' was
